# tesi

prova_cluster/: CMakeLists.txt  CMakeLists.txt~
prova_cluster/clusters/: cluster_19.txt  xluster-00000.txt  xluster-00019.txt  xluster-00071.txt
prova_cluster/src/: main.cpp
prova_ls/: OctaveTest.m  OctaveTest.m~  Pt.txt  Pt_merge.txt  applyT.m  applyT.m~  computeError.m  computeError.m~  computeJacobian.m  computeJacobian.m~  lsChi2.m  lsIteration.m  lsIteration.m~  lsLoop.m  lsLoop.m~  octave-core  printLines.m  printLines.m~  v2t.m
prova_match/src/: listener.cpp  listener.hpp  main.cpp  math_utilities.h  misc_utilities.h
prova_match/stampe/: line_0.txt  line_1.txt  line_10.txt  line_11.txt  line_12.txt  line_13.txt  line_14.txt  line_15.txt  line_16.txt  line_17.txt  line_18.txt  line_19.txt  line_2.txt  line_20.txt  line_21.txt  line_22.txt  line_23.txt  line_24.txt  line_25.txt  line_26.txt  line_27.txt  (+39 more)
prova_octave/: #computeAssociations.m#  Lj.txt  MatchTest.m  MatchTest.m~  OctaveTest.m  OctaveTest.m~  Pi.txt  Pj.txt  Pj_original.txt  Pj_prova.txt  assoc_list.txt  compose_Z.m  compose_Z.m~  computeAssociations.m  computeAssociations.m~  computeDistanceError.m  computeDistanceError.m~  computeDistanceNM.m  computeDistanceNM.m~  computeDistanceRT.m  computeDistanceRT.m~  computeError.m  computeError.m~  computeJacobian.m  computeJacobian.m~  convertedLines_0.txt  convertedLines_1.txt  convertedLines_165.txt  convertedLines_168.txt  convertedLines_3.txt  deleteRepAssocs.m  deleteRepAssocs.m~  findRep.m  findRep.m~  lsIteration.m  lsIteration_gamma.m  lsIteration_gamma.m~  lsLoop.m~  octave-core  printAssoc.m  (+17 more)
(+12 files in other folders)
